more lamden changes

--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@
 }
 \renewcommand\lstlistingname{Algorithm}
 
-\title{The Lamden Project: a framework for the rapid development\\and deployment of blockchain technologies.}
+\title{Lamden: a framework for the rapid development\\and deployment of blockchain technologies.}
 \author{Stuart Farmer\thanks{stu@hadronledger.com}}
 \author{Mario Hernandez\thanks{mario@hadronledger.com}}
 \author{James Munsch\thanks{james@hadronledger.com}}
@@ -391,16 +391,16 @@ While private chains on Lamden are built off of Ethereum which is a distributed 
 Thus, the project will be deployed upon the IPFS protocol to establish a true peer to peer system that is distributed and trustless.
 
 \begin{center}
-\textbf{Bosons, an agnostic digital currency}
+\textbf{Lamden Tau, an agnostic digital asset}
 \end{center}
 
-While payment channels across private chains will help facilitate app-to-app communication, there should also be away for users who are involved in the Lamden project apart from a chain host or developer to easily participate and use the blockchain applications on the Lamden Hub. Thus, we propose an agnostic unit of currency known as a ‘Boson’. Bosons are a digital currency that serve the universal asset of the platform itself, available for trade by users of the system who want to use a currency that use all private chains. Communication with the Boson chain comes out of the box for Lamden developers, so they do not have to form independent relationships with other private chains to start transferring assets to one another. In this fashion, developers can start to integrate a digital currency market and trade into their blockchain applications immediately. By offering a native digital currency out of the box to all Lamden users, Bosons increase the adoption rate of private chains, as more individuals are able to participate with the application coming from the Lamden community.
+While payment channels across private chains will help facilitate app-to-app communication, there should also be away for users who are involved in the Lamden project apart from a chain host or developer to easily participate and use the blockchain applications on the Lamden Hub. Thus, we propose an agnostic utility asset known as 'Lamden Tau'. Tau are a digital asset that serve the universal asset of the platform itself, available for trade by users of the system who want to use a currency that use all private chains. Communication with the Tau chain comes out of the box for Lamden developers, so they do not have to form independent relationships with other private chains to start transferring assets to one another. In this fashion, developers can start to integrate a digital currency market and trade into their blockchain applications immediately. By offering a native digital currency out of the box to all Lamden users, Tau increase the adoption rate of private chains, as more individuals are able to participate with the application coming from the Lamden community.
 
 \begin{center}
 \textbf{Token Sale (Token Scattering Event)}
 \end{center}
 
-The Lamden project will be funded by a Token Distribution Event (Token Scattering) of the Bosons. These Bosons will be available for purchase on the Ethereum main chain in the form of an ERC20 token. Said Bosons will then be available for swapping onto the Lamden chain during a ceremonious process which signifies the milestone achievement of chain-to-chain communication on the Lamden Ledger.
+The Lamden project will be funded by a Token Distribution Event (Token Scattering) of the Lamden Tau. These Lamden Tau will be available for purchase on the Ethereum main chain in the form of an ERC20 token. Said Lamden Tau will then be available for swapping onto the Lamden chain during a ceremonious process which signifies the milestone achievement of chain-to-chain communication on the Lamden Ledger.
 
 Further detailing on the Token Scattering Event is included in organizational documents.
 
