--- a/main.tex
+++ b/main.tex
@@ -66,7 +66,7 @@ In the past several years, we have seen an influx of blockchain technologies hit
 
 The Lamden Project is an effort to create software development tools that increase the mass adoption of blockchain technology so infrastructure can revolutionize the market systems and cause realistic innovation within the markets.
 
-Laid out in this white paper is our critiques of the current state of the markets, and how we plan on improving this space.
+Laid out in this white paper are our critiques of the current state of the markets, and how we plan on improving this space.
 
 \section{Problems with Current Blockchain\\ Implementations}
 
