--- a/main.tex
+++ b/main.tex
@@ -44,10 +44,10 @@
 \renewcommand\lstlistingname{Algorithm}
 
 \title{Lamden: a framework for the rapid development\\and deployment of blockchain technologies.}
-\author{Stuart Farmer\thanks{stu@hadronledger.com}}
-\author{Mario Hernandez\thanks{mario@hadronledger.com}}
-\author{James Munsch\thanks{james@hadronledger.com}}
-\affil{The Lamden Project, White Paper version 0.1.1}
+\author{Stuart Farmer\thanks{stuart@lamden.io}}
+\author{Mario Hernandez\thanks{mario@lamden.io}}
+\author{James Munsch\thanks{james@lamden.io}}
+\affil{The Lamden Project, White Paper version 0.1.2}
 
 \begin{document}
 \sloppy
@@ -56,7 +56,7 @@
     \maketitle
     \begin{abstract}
 	Blockchain application development is unnecessarily hard, partially because of how new the technology is, but also because of certain imposed limitations on the current status quo of how blockchains are used today. In this paper, we discuss the problems with current blockchain implementations and a solution to these problems. We introduce Lamden: a software package of development tools that includes a blockchain generator, community collaboration tools, and independent chain-to-chain communication to create vast networks of blockchain applications that can transfer any asset across them.\\\\
-	{\bf Keywords:} enter, keyword, here.
+	{\bf Keywords:} decentralization, cryptocurrency, distributed systems.
     \end{abstract}
 \end{titlingpage}
 
