Fix email addresses

--- a/main.tex
+++ b/main.tex
@@ -44,10 +44,10 @@
 \renewcommand\lstlistingname{Algorithm}
 
 \title{Lamden: a framework for the rapid development\\and deployment of blockchain technologies.}
-\author{Stuart Farmer\thanks{stu@lamden.com}}
-\author{Mario Hernandez\thanks{mario@lamden.com}}
-\author{James Munsch\thanks{james@lamden.com}}
-\affil{The Lamden Project, White Paper version 0.2.0}
+\author{Stuart Farmer\thanks{stu@lamden.io}}
+\author{Mario Hernandez\thanks{mario@lamden.io}}
+\author{James Munsch\thanks{james@lamden.io}}
+\affil{The Lamden Project, White Paper version 0.2.1}
 
 \begin{document}
 \sloppy
